finish phase 3: cross-posting to multiple subs

--- a/RedditClone/app/views/posts/show.html.erb
+++ b/RedditClone/app/views/posts/show.html.erb
@@ -4,3 +4,4 @@
 <% if logged_in? && current_user.id == @post.author_id %>
     <a href="<%= edit_post_url(@post)%>">Edit Post</a>
 <% end %>
+<%= link_to 'Back', :back %>
