--- a/RedditClone/app/views/subs/show.html.erb
+++ b/RedditClone/app/views/subs/show.html.erb
@@ -4,12 +4,12 @@
     <a href="<%=edit_sub_url(@sub)%>">Edit Sub</a>
 <% end %>
 <%= all_subs %>
-<a href="<%=new_sub_post_url(@sub.id)%>">Create a new post.</a>
+<a href="<%=new_post_url({sub_id: @sub.id})%>">Create a new post.</a>
 <br>
 <% @sub.posts.each do |post| %>
     <ul>
         <li><a href="<%= post.url %>"><h2><%= post.title %></h2></a></li>
-        <li><a href="<%= user_url(post.author_id) %>"><%= post.author.username %></a></li>
-        <li><a href="<%= sub_post_url(post.sub_id, post) %>">Read More</a></li>
+        <li><a href="<%= user_url(post.author_id) %>">Written By <%= post.author.username %></a></li>
+        <li><a href="<%= post_url(post) %>">Read More</a></li>
     </ul>
 <% end %>
